# cancel-gitlab-pipelines

./: LICENSE  cancel_pipelines.py  pyproject.toml
