[tool.poetry]
name = "simonbru-gitlab-cancel-pipelines"
version = "0.1.0"
description = "Cancel all Gitlab pipelines of a user."
authors = ["Simon Brulhart <simon@brulhart.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
goodconf = {version = "^1.0", extras = ["yaml"]}

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
ipdb = "^0.12.2"

[tool.poetry.scripts]
cancel_pipelines = "cancel_pipelines:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
